crates/compiler/codegen/tests/snapshots/codegen_auto_discovery__all_fixtures_codegen@functions__assign_to_binop.cm.snap
---
source: crates/compiler/codegen/tests/codegen_auto_discovery.rs
description: Codegen snapshot for functions/assign_to_binop.cm
input_file: test_data/functions/assign_to_binop.cm
---
Fixture: functions/assign_to_binop.cm
============================================================
Source code:
fn assign_to_binop() -> felt {
    let a = 10;
    let b = 20;
    let c = 0;
    c = a + b;
    return c;
}

============================================================
Generated CASM:
assign_to_binop:
assign_to_binop:
assign_to_binop_0:
   0: 9 10 0 _             // [fp + 0] = 10
   1: 9 20 1 _             // [fp + 1] = 20
   2: 9 0 -3 _             // [fp + -3] = 0
   3: 0 0 1 3              // [fp + 3] = [fp + 0] op [fp + 1]
   4: 4 3 0 -3             // Store: [fp + -3] = [fp + 3] + 0
   5: 11 _ _ _             // return
