crates/compiler/codegen/tests/snapshots/codegen_auto_discovery__all_fixtures_codegen@functions__factorial.cm.snap
---
source: crates/compiler/codegen/tests/codegen_auto_discovery.rs
description: Codegen snapshot for functions/factorial.cm
input_file: test_data/functions/factorial.cm
---
Fixture: functions/factorial.cm
============================================================
Source code:
fn main() -> felt {
    let n = 10;
    let result = factorial(n);
    return result;
}

fn factorial(n: felt) -> felt {
    if (n == 0) {
        return 1;
    }
    return n * factorial(n - 1);
}

============================================================
Generated CASM:
main:
   0: 9 10 2 _             // [fp + 2] = 10
   1: 10 4 4 _             // call factorial
   2: 4 3 0 -3             // Return value 0: [fp -3] = [fp + 3] + 0
   3: 11 _ _ _             // return
factorial:
   4: 14 -4 4 _            // if [fp + -4] != 0 jmp rel factorial_2
   5: 12 6 _ _             // jump abs factorial_1
factorial_1:
   6: 9 1 -3 _             // Return value 0: [fp -3] = 1
   7: 11 _ _ _             // return
factorial_2:
   8: 5 -4 1 3             // [fp + 3] = [fp + -4] op 1
   9: 10 5 4 _             // call factorial
  10: 2 -4 4 -3            // [fp + -3] = [fp + -4] op [fp + 4]
  11: 11 _ _ _             // return
