crates/compiler/codegen/tests/snapshots/codegen_auto_discovery__all_fixtures_codegen@functions__fib.cm.snap
---
source: crates/compiler/codegen/tests/codegen_auto_discovery.rs
description: Codegen snapshot for functions/fib.cm
input_file: test_data/functions/fib.cm
---
Fixture: functions/fib.cm
============================================================
Source code:
fn main() -> felt {
    let n = 10;
    let result = fib(n);
    return result;
}

fn fib(n: felt) -> felt {
    if (n == 0) {
        return 0;
    }
    if (n == 1) {
        return 1;
    }
    let res1 = fib(n - 1);
    let res2 = fib(n - 2);
    return res1 + res2;
}

============================================================
Generated CASM:
main:
   0: 9 10 2 _             // [fp + 2] = 10
   1: 10 4 4 _             // call fib
   2: 4 3 0 -3             // Return value 0: [fp -3] = [fp + 3] + 0
   3: 11 _ _ _             // return
fib:
   4: 14 -4 4 _            // if [fp + -4] != 0 jmp rel fib_2
   5: 12 6 _ _             // jump abs fib_1
fib_1:
   6: 9 0 -3 _             // Return value 0: [fp -3] = 0
   7: 11 _ _ _             // return
fib_2:
   8: 5 -4 1 5             // [fp + 5] = [fp + -4] op 1
   9: 14 5 3 _             // if [fp + 5] != 0 jmp rel fib_4
fib_3:
  10: 9 1 -3 _             // Return value 0: [fp -3] = 1
  11: 11 _ _ _             // return
fib_4:
  12: 5 -4 1 6             // [fp + 6] = [fp + -4] op 1
  13: 10 8 4 _             // call fib
  14: 5 -4 2 9             // [fp + 9] = [fp + -4] op 2
  15: 10 11 4 _            // call fib
  16: 0 7 10 -3            // [fp + -3] = [fp + 7] op [fp + 10]
  17: 11 _ _ _             // return
